feat: enhance YAML requirements parsing and validation rules